# IoApi

./: .gitignore  CMakeLists.txt  README.md
include/ioapi/: device.h  io.h
include/ioapi/impl/: device_async.h  device_ctl.h  device_event.h  device_generic.h  device_sync.h  io_async.h  io_cfg.h  io_ctl.h  io_generic.h  io_sync.h
src/ioapi/: device.c  io.c
